--- a/css/design.css
+++ b/css/design.css
@@ -27,6 +27,11 @@ main {
     font-size: 16px;
 }
 
+.logoutbtn {
+    position: relative;
+    left: 45.5%;
+}
+
 table {
         border-collapse: collapse;
         width: 100%;
