--- a/css/design.css
+++ b/css/design.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    width: 935px;
+    width: 1020px;
     margin: 0 auto;
     background-color: white;
     padding: 20px;
@@ -25,6 +25,12 @@ main {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    vertical-align: middle;
+}
+
+.logoutbtn {
+  position: relative;
+  left: 45.5%;
 }
 
 table {
@@ -57,6 +63,12 @@ h1 {
     margin-top: 0;
 }
 
+h2 {
+    font-size: 25px;
+    margin: 10px;
+    margin-top: 0;
+}
+
 .aktion {
     text-decoration: none;
     color: teal;
@@ -71,7 +83,9 @@ h1 {
 }
 .abstand {
     margin-bottom: 5px;
+    display: block;
 }
+
 .abstandlogin {
     margin-left: 5px;
 }
@@ -80,4 +94,18 @@ h1 {
     width: 25%;
     padding: 8px 10px;
     box-sizing: border-box;
+    vertical-align: middle;
+}
+
+input[type=date].textfield {
+  padding: 5px 10px;
+}
+
+.backbtn {
+  float: left;
+}
+
+#pwabstand {
+  margin-bottom: 5px;
+  display: block;
 }
