--- a/css/design.css
+++ b/css/design.css
@@ -39,8 +39,10 @@ main {
 }
 
 table {
+    box-sizing: border-box;
     border-collapse: collapse;
     width: 100%;
+    table-layout: fixed;
 }
 
 th, td {
@@ -56,8 +58,6 @@ tr:nth-child(even) {
 th {
     background-color: #6769F1;
     color: white;
-
-
 }
 
 .th {
@@ -66,14 +66,24 @@ th {
 }
 
 .td {
+    font-size: 20px;
     text-decoration: none;
     color: teal;
+    width: 550px;
+    table-layout: fixed;
 }
 
 form input {
-    padding: 3px;
     font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
 }
+input {
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 
 h1 {
     font-size: 30px;
